nambah stock