@@ -21,6 +21,7 @@ import org.springframework.stereotype.Service;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -58,7 +59,10 @@ public class ProductServiceImpl implements ProductService {
             logger.info("==================== Logger End Get All Products    ====================");
             logger.info(" ");
 
-            List<ProductResponseDTO> results = dtoConverter.convertProducts(products);
+            List<ProductResponseDTO> results = dtoConverter.convertProducts(products)
+                    .stream()
+                    .filter(product->product.getStock()>0)
+                    .collect(Collectors.toList());
             return ResponseHandler.generateResponse("successfully get all products", HttpStatus.OK, results);
         } catch (Exception e) {
             logger.info("==================== Logger Start Get All Products     ====================");
@@ -97,7 +101,10 @@ public class ProductServiceImpl implements ProductService {
             sort = this.sort(sort);
             Pageable pageable = Pagination.paginate(page, sort, descending);
             List<Product> products = productRepository.findByProductNameIgnoreCaseContaining(name, pageable);
-            List<ProductResponseDTO> results = dtoConverter.convertProducts(products);
+            List<ProductResponseDTO> results = dtoConverter.convertProducts(products)
+                    .stream()
+                    .filter(product->product.getStock()>0)
+                    .collect(Collectors.toList());
             logger.info(Line + "Logger Start Get product name " + Line);
             logger.info(String.valueOf(results));
             logger.info(Line + "Logger End Get product name " + Line);
@@ -116,7 +123,10 @@ public class ProductServiceImpl implements ProductService {
             sort = this.sort(sort);
             Pageable pageable = Pagination.paginate(page, sort, descending);
             List<Product> products = productRepository.findBySellerUserUsernameIgnoreCaseContaining(name, pageable);
-            List<ProductResponseDTO> results = dtoConverter.convertProducts(products);
+            List<ProductResponseDTO> results = dtoConverter.convertProducts(products)
+                    .stream()
+                    .filter(product->product.getStock()>0)
+                    .collect(Collectors.toList());
             logger.info(Line + "Logger Start Get seller name " + Line);
             logger.info(String.valueOf(results));
             logger.info(Line + "Logger End Get seller name " + Line);
@@ -136,7 +146,10 @@ public class ProductServiceImpl implements ProductService {
             Pageable pageable = Pagination.paginate(page, sort, descending);
 
             List<Product> products = productRepository.findBySellerStoreNameIgnoreCaseContaining(name, pageable);
-            List<ProductResponseDTO> results = dtoConverter.convertProducts(products);
+            List<ProductResponseDTO> results = dtoConverter.convertProducts(products)
+                    .stream()
+                    .filter(product->product.getStock()>0)
+                    .collect(Collectors.toList());
 
             logger.info(Line + "Logger Start Get store name " + Line);
             logger.info(String.valueOf(results));
@@ -157,7 +170,10 @@ public class ProductServiceImpl implements ProductService {
             Pageable pageable = Pagination.paginate(page, sort, descending);
 
             List<Product> products = productRepository.findByCategoriesCategoryCategoriesId(id, pageable);
-            List<ProductResponseDTO> results = dtoConverter.convertProducts(products);
+            List<ProductResponseDTO> results = dtoConverter.convertProducts(products)
+                    .stream()
+                    .filter(product->product.getStock()>0)
+                    .collect(Collectors.toList());
 
             logger.info(Line + "Logger Start Get By Category Id " + Line);
             logger.info(String.valueOf(results));
@@ -179,7 +195,10 @@ public class ProductServiceImpl implements ProductService {
             Pageable pageable = Pagination.paginate(page, sort, descending);
 
             List<Product> products = productRepository.findByCategoriesCategoryNameIgnoreCaseContaining(name, pageable);
-            List<ProductResponseDTO> results = dtoConverter.convertProducts(products);
+            List<ProductResponseDTO> results = dtoConverter.convertProducts(products)
+                    .stream()
+                    .filter(product->product.getStock()>0)
+                    .collect(Collectors.toList());
 
             logger.info(Line + "Logger Start Get category name " + Line);
             logger.info(String.valueOf(results));
@@ -220,8 +239,8 @@ public class ProductServiceImpl implements ProductService {
 
     @Override
     public ResponseEntity<Object> search(String keyword, Integer page, String sort, boolean descending) throws Exception {
-        try{
-            if (sort!=null){
+        try {
+            if (sort != null) {
                 switch (sort) {
                     case "id" -> sort = "product.id";
                     case "price" -> sort = "product.price";
@@ -234,15 +253,16 @@ public class ProductServiceImpl implements ProductService {
                 }
             }
             Pageable pageable = Pagination.paginate(page, sort, descending);
-            List<ProductCategory> productCategories = productCategoryRepository.search(keyword.toUpperCase(),pageable).getContent();
-            if(productCategories.isEmpty()){
+            List<ProductCategory> productCategories = productCategoryRepository.search(keyword.toUpperCase(), pageable).getContent();
+            if (productCategories.isEmpty()) {
                 throw new Exception("Product Not found");
             }
             List<ProductResponseDTO> results = productCategories.stream()
                     .map(ProductCategory::getProduct)
                     .distinct()
                     .map(dtoConverter::convertOneProducts)
-                    .toList();
+                    .filter(product->product.getStock()>0)
+                    .collect(Collectors.toList());
             logger.info(Line + "Logger Start Search" + Line);
             logger.info(String.valueOf(results));
             logger.info(Line + "Logger End Get Search" + Line);
@@ -261,12 +281,15 @@ public class ProductServiceImpl implements ProductService {
             Seller seller = sellerRepository.findByUserUsername(authentication.getName()).orElseThrow(() -> new Exception("You don't have store"));
             Pageable pageable = Pagination.paginate(0, "price", false);
             List<Product> products = productRepository.findBySellerSellerId(seller.getSellerId(), pageable);
-            if (productRequestDTO.getProductName() == null || productRequestDTO.getDescription() == null
-                    || productRequestDTO.getCategory() == null || productRequestDTO.getPrice() == null) {
+            if (productRequestDTO.getProductName() == null
+                    || productRequestDTO.getDescription() == null
+                    || productRequestDTO.getCategory() == null
+                    || productRequestDTO.getPrice() == null
+                    || productRequestDTO.getStock() == null) {
                 throw new Exception("Please check again your input, it can't empty");
             }
-            if (productRequestDTO.getPrice() <= 0) {
-                throw new Exception("Price can't be 0 or negatif");
+            if (productRequestDTO.getPrice() <= 0||productRequestDTO.getStock() <= 0) {
+                throw new Exception("Price or stock can't be 0 or negatif");
             }
             if (productRequestDTO.getCategory().size() > 4) {
                 throw new Exception("Product can only have 4 category");
@@ -312,11 +335,12 @@ public class ProductServiceImpl implements ProductService {
         try {
             if (productRequestDTO.getProductName() == null
                     || productRequestDTO.getDescription() == null
-                    || productRequestDTO.getPrice() == null) {
+                    || productRequestDTO.getPrice() == null
+                    || productRequestDTO.getStock() == null) {
                 throw new Exception("Please check again your input, it can't empty");
             }
-            if (productRequestDTO.getPrice() <= 0) {
-                throw new Exception("Price can't be 0 or negatif");
+            if (productRequestDTO.getPrice() <= 0||productRequestDTO.getStock() <= 0) {
+                throw new Exception("Price or stock can't be 0 or negatif");
             }
             Seller seller = sellerRepository.findByUserUsername(authentication.getName()).orElseThrow(() -> new Exception("You don't have store"));
             Product product = productRepository.findById(id).orElseThrow(() -> new Exception("Product Not Found"));
@@ -334,7 +358,7 @@ public class ProductServiceImpl implements ProductService {
                 product.setPrice(productRequest.getPrice());
 
                 //check categories
-                if (productRequestDTO.getCategory()!=null) {
+                if (productRequestDTO.getCategory() != null) {
                     List<String> categories = productRequestDTO.getCategory();
                     List<Category> categoryProduct = categoryRepository.findByProductsProductId(id);
                     if (categories.size() + categoryProduct.size() >= 4) {
@@ -343,7 +367,7 @@ public class ProductServiceImpl implements ProductService {
                     this.checkCategories(categories);
                     saveProduct = productRepository.save(product);
                     this.addCategory(categories, saveProduct);
-                }else {
+                } else {
                     saveProduct = productRepository.save(product);
                 }
                 ProductResponseDTO results = dtoConverter.convertOneProducts(saveProduct);
@@ -423,13 +447,13 @@ public class ProductServiceImpl implements ProductService {
             }
         });
     }
-    public String sort(String sort){
-        if (sort!=null){
+
+    public String sort(String sort) {
+        if (sort != null) {
             switch (sort) {
                 case "id" -> sort = "productId";
                 case "sellerId" -> sort = "seller.sellerId";
                 case "storeName" -> sort = "seller.storeName";
-
             }
         }
         return sort;
